# handler/news.go
@@ -297,3 +297,40 @@ func UnPublishNews(w http.ResponseWriter, r *http.Request) {
 	util.Ren.JSON(w, http.StatusOK, map[string]interface{}{"code": 0, "message": "操作成功"})
 	return
 }
+
+//UpdateNews
+func UpdateNews(w http.ResponseWriter, r *http.Request) {
+	// check params
+	f := new(form.NewsUpdateForm)
+
+	if errs := binding.Bind(r, f); errs != nil {
+		fmt.Println("SignWithWx: bind err: ", errs)
+		util.Ren.JSON(w, http.StatusBadRequest, map[string]interface{}{"code": 16601, "message": "数据格式错误",
+			"err": errs})
+		return
+	}
+
+	ctx := r.Context()
+	nms := ctx.Value(nigronimgosession.KEY).(*nigronimgosession.NMS)
+	fmt.Println("======= 获得nms")
+
+	upsertdata := bson.M{"$set": bson.M{"title": f.Title, "content": f.Content, "image": f.Image,}}
+	err := nms.DB.C("news").UpdateId(bson.ObjectIdHex(f.ID), upsertdata)
+
+	if err != nil && err != mgo.ErrNotFound {
+		fmt.Println("======= update err: ", err)
+		util.Ren.JSON(w, http.StatusInternalServerError, map[string]interface{}{"code": 16602, "message":
+		"插入数据库时遇到内部错误", "err": err})
+		return
+	}
+
+	if err != nil && err == mgo.ErrNotFound {
+		fmt.Println("======= not found : ")
+		util.Ren.JSON(w, http.StatusBadRequest, map[string]interface{}{"code": 16603, "message": "不存在此条数据",
+			"err": err})
+		return
+	}
+
+	util.Ren.JSON(w, http.StatusOK, map[string]interface{}{"code": 0, "message": "操作成功"})
+	return
+}
